RESOLVED FIXED228622
REGRESSION (r275641): [ iPad Debug ] accessibility/ios-simulator/scroll-in-overflow-div.html is asserting
https://bugs.webkit.org/show_bug.cgi?id=228622
Summary REGRESSION (r275641): [ iPad Debug ] accessibility/ios-simulator/scroll-in-ov...
ayumi_kojima
Reported 2021-07-29 16:41:43 PDT
accessibility/ios-simulator/scroll-in-overflow-div.html Is crashing on iOS 14 E simulator wk2 iPad Debug History: https://results.webkit.org/?suite=layout-tests&test=accessibility%2Fios-simulator%2Fscroll-in-overflow-div.html
Attachments
Crash log found in the build. I couldn't get a crash log on the remote machine (156.77 KB, text/plain)
2021-07-29 16:43 PDT, ayumi_kojima
no flags
Patch (1.37 KB, patch)
2021-10-21 16:31 PDT, Simon Fraser (smfr)
no flags
Radar WebKit Bug Importer
Comment 1 2021-07-29 16:41:54 PDT
ayumi_kojima
Comment 2 2021-07-29 16:43:40 PDT
Created attachment 434589 [details] Crash log found in the build. I couldn't get a crash log on the remote machine I was able to reproduce the crash on iOS 15 simulator on my local machine using: run-webkit-tests --debug --ipad-simulator --exit-after-n-failures 2 --exit-after-n-crashes-or-timeouts 2 accessibility/ios-simulator/scroll-in-overflow-div.html
ayumi_kojima
Comment 3 2021-07-29 16:44:53 PDT
(In reply to ayumi_kojima from comment #2) > Created attachment 434589 [details] > Crash log found in the build. I couldn't get a crash log on the remote > machine > > I was able to reproduce the crash on iOS 15 simulator on my local machine > using: > > run-webkit-tests --debug --ipad-simulator --exit-after-n-failures 2 > --exit-after-n-crashes-or-timeouts 2 > accessibility/ios-simulator/scroll-in-overflow-div.html Disregard "Crash log found in the build. I couldn't get a crash log on the remote machine"
ayumi_kojima
Comment 4 2021-07-30 10:52:45 PDT
It seems that the crash started at r275641 as it didn't crash at r275640
ayumi_kojima
Comment 5 2021-07-30 13:59:14 PDT
Simon Fraser (smfr)
Comment 6 2021-10-21 15:51:15 PDT
CRASHING TEST: accessibility/ios-simulator/scroll-in-overflow-div.html Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.JavaScriptCore 0x000000038c97d2fe WTFCrash + 14 (Assertions.cpp:321) 1 com.apple.WebCore 0x00000003952bfa7b WTFCrashWithInfo(int, char const*, char const*, int) + 27 (Assertions.h:732) 2 com.apple.WebCore 0x0000000399bfaa93 WebCore::RenderLayer::clearRepaintRects() + 115 (RenderLayer.cpp:1142) 3 com.apple.WebCore 0x0000000399bfbe09 WebCore::RenderLayer::updateSelfPaintingLayer() + 185 (RenderLayer.cpp:5217) 4 com.apple.WebCore 0x0000000399c15cbd WebCore::RenderLayer::styleChanged(WebCore::StyleDifference, WebCore::RenderStyle const*) + 733 (RenderLayer.cpp:5391) 5 com.apple.WebCore 0x0000000399c8420a WebCore::RenderLayerModelObject::styleDidChange(WebCore::StyleDifference, WebCore::RenderStyle const*) + 874 (RenderLayerModelObject.cpp:143) 6 com.apple.WebCore 0x0000000399abcbb7 WebCore::RenderBox::styleDidChange(WebCore::StyleDifference, WebCore::RenderStyle const*) + 71 (RenderBox.cpp:302)
Simon Fraser (smfr)
Comment 7 2021-10-21 16:31:46 PDT
EWS
Comment 8 2021-10-21 17:08:21 PDT
Committed r284655 (243375@main): <https://commits.webkit.org/243375@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 442082 [details].
Note You need to log in before you can comment on or make changes to this bug.