REGRESSION (r275641): [ iPad Debug ] accessibility/ios-simulator/scroll-in-overflow-div.html is asserting https://bugs.webkit.org/show_bug.cgi?id=228622

Reviewed by Alan Bujtas.

The test was hitting ASSERT(!m_visibleContentStatusDirty). It seems harmless to clear
repaint rects when m_visibleContentStatusDirty is true.

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::clearRepaintRects):


Canonical link: https://commits.webkit.org/243375@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284655 268f45cc-cd09-0410-ab3c-d52691b4dbfc